stop bg-img stretch (1)

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -105,7 +105,7 @@ body {
   body#bg-img {
     background-image: url(../img/17.jpg);
     background: rgba(68, 68, 68, 0.9), url(../img/17.jpg);
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed; }
